<resources>
    <string name="app_name">MapSample</string>
    <string name="nombre">AUDIO Run</string>
    <string name="departure">Departure</string>
    <string name="destination">Destination</string>
    <string name="viapoint">Via-Point</string>
    <string name="route">Route</string>
    <string name="itinerary_markers_title">Route Via-Points</string>
    <string name="step">Step</string>
    <string name="tit1">Pistas Precargadas</string>
    <string name="tit2">Estadio de la Carolina</string>
    <string name="tit3">Estadio EPN</string>
    <string name="tit4">Estadio ESMIL</string>
    <string name="tit5">Buscar pistas en el dispositivo</string>
    <string name="tit6">Cargar archivo gpx</string>


    <string-array name="poi_tags">
        <!-- Aeroway -->
        <item>Airport</item>
        <!-- Amenity -->
        <item>ATM</item>
        <item>Bank</item>
        <item>Bar</item>
        <item>Bus station</item>
        <item>Cafe</item>
        <item>Casino</item>
        <item>Car rental</item>
        <!-- <item>car sharing</item> -->
        <item>Car wash</item>
        <item>Cinema</item>
        <item>Community Centre</item>
        <item>Cycle parking</item>
        <item>Dentist</item>
        <item>Doctors</item>
        <item>Fast food</item>
        <item>Fire station</item>
        <item>Fuel</item>
        <item>Hospital</item>
        <item>Kindergarten</item>
        <item>Library</item>
        <item>Marketplace</item>
        <item>Night club</item>
        <item>Nursery</item>
        <item>Parking</item>
        <item>Pharmacy</item>
        <item>Phone booth</item>
        <item>Police</item>
        <item>Post box</item>
        <item>Post office</item>
        <item>Pub</item>
        <item>Recycling point</item>
        <item>Restaurant</item>
        <item>Retirement home</item>
        <item>School</item>
        <item>Shelter</item>
        <item>Taxi</item>
        <item>Telephone</item>
        <item>Theatre</item>
        <item>Toilets</item>
        <item>Town Hall</item>
        <item>University</item>
        <item>Veterinary surgery</item>
        <!-- Building -->
        <item>Church</item>
        <item>Hotel</item>
        <!-- Historic -->
        <item>Castle</item>
        <item>Monument</item>
        <!-- Land use -->
        <item>Cemetery</item>
        <item>Landfill</item>
        <item>Mine</item>
        <item>Wood</item>
        <!-- Leisure -->
        <item>Golf course</item>
        <item>Park</item>
        <item>Stadium</item>
        <item>Swimming pool</item>
        <!-- Natural -->
        <item>Beach</item>
        <!-- Public Transport -->
        <item>Station</item>
        <!-- Shop -->
        <item>Bakery</item>
        <item>Book shop</item>
        <item>Butcher</item>
        <item>Car shop</item>
        <item>Car dealer</item>
        <item>Car parts</item>
        <item>Car repair</item>
        <item>Clothes shop</item>
        <item>Convenience store</item>
        <!-- <item>Copy shop</item> -->
        <!-- <item>Discount items shop</item> -->
        <item>Do-It-Yourself</item>
        <item>Drugstore</item>
        <item>Dry Cleaning</item>
        <item>Fish shop</item>
        <item>Florist</item>
        <item>Furniture</item>
        <item>Garden center</item>
        <item>Gift shop</item>
        <item>Grocery shop</item>
        <item>Haidresser</item>
        <item>Jewelry shop</item>
        <item>Kiosk</item>
        <item>Laundry</item>
        <item>Mall</item>
        <item>Optician</item>
        <item>Shoe shop</item>
        <item>Sports shop</item>
        <item>Supermarket</item>
        <item>Toy shop</item>
        <item>Travel agency</item>
        <!-- Sport -->
        <item>Sports pitch</item>
        <!-- Tourism -->
        <item>Attraction</item>
        <item>Camp site</item>
        <item>Caravan site</item>
        <item>Information</item>
        <item>Museum</item>
        <item>Picnic site</item>
        <item>Theme park</item>
        <item>Viewpoint</item>
        <item>Ruin</item>
        <item>Water park</item>
        <item>Zoo</item>
        <!-- Non-Nominatim tags, for other services: -->
        <item>wikipedia</item>
        <item>flickr</item>
        <item>picasa</item>
    </string-array>

    <string-array name="osm_poi_tags">
        <!-- Aeroway -->
        <item>airport|aeroway=aerodrome</item>
        <!-- Amenity -->
        <item>atm|amenity=atm</item>
        <item>bank|amenity=bank</item>
        <item>bar|amenity=bar</item>
        <item>bus station|public_transport=station</item>
        <item>cafe|amenity=cafe</item>
        <item>casino|amenity=casino</item>
        <item>car rental|amenity=car_rental</item>
        <item>car wash|amenity=car_wash</item>
        <item>cinema|amenity=cinema</item>
        <item>community centre|amenity=community_center</item>
        <item>cycle parking|amenity=bicycle_parking</item>
        <item>dentist|amenity=dentist</item>
        <item>doctors|amenity=doctors</item>
        <item>fast food|amenity=fast_food</item>
        <item>fire station|amenity=fire_station</item>
        <item>fuel|amenity=fuel</item>
        <item>hospital|amenity=hospital</item>
        <item>kindergarten|amenity=kindergarten</item>
        <item>library|amenity=library</item>
        <item>marketplace|amenity=marketplace</item>
        <item>night club|amenity=nightclub</item>
        <item>nursery|amenity=nursery</item>
        <item>parking|amenity=parking</item>
        <item>pharmacy|amenity=pharmacy</item>
        <item>phone booth|amenity=telephone</item>
        <item>police|amenity=police</item>
        <item>post box|amenity=post_box</item>
        <item>post office|amenity=post_office</item>
        <item>pub|amenity=pub</item>
        <item>recycling point|amenity=recycling</item>
        <item>restaurant|amenity=restaurant</item>
        <item>retirement home|amenity=retirement_home</item>
        <item>school|amenity=school</item>
        <item>shelter|amenity=shelter</item>
        <item>taxi|amenity=taxi</item>
        <item>telephone|amenity=telephone</item>
        <item>theatre|amenity=theatre</item>
        <item>toilets|amenity=toilets</item>
        <item>town hall|amenity=townhall</item>
        <item>university|amenity=university</item>
        <item>veterinary surgery|amenity=veterinary</item>
        <!-- Building -->
        <item>church|building=church</item>
        <item>hotel|building=hotel</item>
        <!-- Historic -->
        <item>castle|historic=castle</item>
        <item>monument|historic=monument</item>
        <item>ruin|historic=ruin</item>
        <!-- Land use -->
        <item>cemetery|landuse=cemetery</item>
        <item>mine|landuse=mine</item>
        <!-- Leisure -->
        <item>golf course|leisure=golf</item>
        <item>park|leisure=park</item>
        <item>stadium|leisure=stadium</item>
        <item>swimming pool|leisure=swimming_pool</item>
        <item>sports pitch|leisure=pitch</item>
        <item>water park|leisure=water_park</item>
        <!-- Natural -->
        <item>beach|natural=beach</item>
        <!-- Public Transport -->
        <item>station|railway=station</item>
        <!-- Shop -->
        <item>bakery|shop=bakery</item>
        <item>book shop|shop=books</item>
        <item>butcher|shop=butcher</item>
        <item>car shop|shop=car</item>
        <item>car dealer|shop=car_dealer</item>
        <item>car parts|shop=car_parts</item>
        <item>car repair|shop=car_repair</item>
        <item>clothes shop|shop=clothes</item>
        <item>convenience store|shop=convenience</item>
        <item>do-it-yourself|shop=doityourself</item>
        <item>drugstore|shop=drugstore</item>
        <item>dry cleaning|shop=dry_cleaning</item>
        <item>fish shop|shop=fish</item>
        <item>florist|shop=florist</item>
        <item>furniture|shop=furniture</item>
        <item>garden center|shop=garden_centre</item>
        <item>gift shop|shop=gift</item>
        <item>grocery shop|shop=grocery</item>
        <item>haidresser|shop=hairdresser</item>
        <item>jewelry shop|shop=jewelry</item>
        <item>kiosk|shop=kiosk</item>
        <item>laundry|shop=laundry</item>
        <item>mall|shop=mall</item>
        <item>optician|shop=optician</item>
        <item>shoe shop|shop=shoes</item>
        <item>sports shop|shop=sports</item>
        <item>supermarket|shop=supermarket</item>
        <item>toy shop|shop=toys</item>
        <item>travel agency|shop=travel_agency</item>
        <!-- Tourism -->
        <item>attraction|tourism=attraction</item>
        <item>camp site|tourism=camp_site</item>
        <item>caravan site|tourism=caravan_site</item>
        <item>information|tourism=information</item>
        <item>museum|tourism=museum</item>
        <item>picnic site|tourism=picnic_site</item>
        <item>theme park|tourism=theme_park</item>
        <item>viewpoint|tourism=viewpoint</item>
        <item>zoo|tourism=zoo</item>
    </string-array>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="title_activity_spalish">Spalish</string>
</resources>
