<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Tema_Home"
    tools:context=".OptionsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_conf"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        app:titleTextColor="@color/colorIniWhite"
        android:background="@color/colorAudioRunPrimario" />

    <TextView
        android:id="@+id/tit1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tit1"
        android:textSize="28dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        />
    <Button
        android:id="@+id/b_carolina"
        android:layout_width="370dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/tit2"
        android:textSize="28dp"

        />
    <Button
        android:id="@+id/b_estadiox"
        android:layout_width="370dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/tit3"
        android:textSize="28dp"
        />
    <Button
        android:id="@+id/b_estadioy"
        android:layout_width="370dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/tit4"
        android:textSize="28dp"
        />

    <Button
        android:id="@+id/btestadio3"
        android:layout_width="370dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="ESTADIO ALANGASI"
        android:visibility="invisible"
        android:textSize="28dp"
        />
    <Button
        android:id="@+id/btestadio4"
        android:layout_width="370dp"
        android:layout_gravity="center"
        android:layout_height="12dp"
        android:layout_marginBottom="10dp"
        android:visibility="invisible"
        android:text="ESTADIO ALANGASI 2"
        android:textSize="28dp"

        />

    <TextView
        android:id="@+id/tit5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:text="@string/tit5"
        android:textSize="28dp"
        android:gravity="center"
        android:visibility="invisible"
        />
    <Button
        android:id="@+id/b_cargar_gpx"
        android:layout_width="370dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/tit6"
        android:textSize="28dp"
        android:visibility="visible"
        />

    <CheckBox
        android:id="@+id/cdAuriculare_oseos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="Habilitar auriculares oseos" />


    <CheckBox android:id="@+id/checkbox_audio"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:text="Habilitar Audio Guía"
        android:visibility="gone"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Desarrollado por: Jonathan Vargas y Diego Navas "
        android:textSize="16dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:gravity="left"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="jonathan.vargas1104@gmail.com "
        android:textSize="16dp"
        android:layout_marginBottom="1dp"
        android:gravity="left"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="diegonf26@gmail.com "
        android:textSize="16dp"
        android:layout_marginBottom="1dp"
        android:gravity="left"
        />


</LinearLayout>
